# gitcheck

./: .gitignore  CONTRIBUTING.md  Jenkinsfile  README.md  action.yml  howto.md  malicious.py  pyproject.toml  report.html  report.json  requirements.txt  scan_report.html  test_regex.py
.github/workflows/: docker-publish.yaml  python-tests.yml
aggregation/: README.md  __init__.py  scorer.py
analysis/: README.md  api_keys.py  container_scanner.py  iac_scanner.py  malicious_scanner.py  malicious_scripts.py  sca_scanner.py  secret_scanner.py
analysis/ast_engine/: __init__.py
cli/: README.md  main.py  report_generator.py
config/: README.md  container_compliance.json  iac_compliance.json  malicious_compliance.json  sca_compliance.json  secrets_compliance.json
dir-mapper/: README.md
docker/: Dockerfile  README.md  entrypoint.sh
filter/: README.md  __init__.py  container_filter.py  iac_filter.py  malicious_filter.py  noise_filter.py  sca_filter.py  secret_filter.py
ingestion/: README.md  __init__.py  git_extractor.py
integrations/: github_reporter.py
malicious/: Dockerfile  evil.sh  insecure_infra.tf  k8s_pod.yaml  malicious.py  requirements.txt
tests/: README.md  conftest.py  test_malicious_scenarios.py  test_scanners.py
