[build-system]
requires=["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="gitcheck"
version="0.1.0"
dependencies = [
    "gitpython","type-sitter", "pyyaml", "click", "rich",
]

[project.scripts]
gitcheck="cli.main:run_pipeline"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v --html=report.html --self-contained-html --json-report --json-report-file=report.json"